--- a/css/initial.css
+++ b/css/initial.css
@@ -94,3 +94,33 @@ button:disabled {
   cursor: not-allowed;
   color: #999;
 }
+
+/* popup */
+.popup {
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0,0,0,0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* estilo do conteudo de dentro do popup */
+.popup-conteudo {
+  background: rgba(0, 0, 0, 0.87);
+  color: #ffffffd3;
+  padding: 25px 35px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 320px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+/* estilo extra aos botões */
+.popup-conteudo button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
