--- a/css/game.css
+++ b/css/game.css
@@ -85,6 +85,7 @@ body {
   height: 100%;
   object-fit: cover;
 }
+
 /* Verso: o que aparece antes de virar */
 .card-back {
   background: url('../imagens/back.png') no-repeat center center;
@@ -95,4 +96,42 @@ body {
   justify-content: center;
   font-size: 24px;
   color: white;
+}
+
+/* popup */
+.popup {
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(0,0,0,0.7);
+  display: none; /* começa escondido */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* estilo do conteudo de dentro do popup */
+.popup-conteudo {
+  background: rgba(0, 0, 0, 0.87);
+  color: #ffffffd3;
+  padding: 25px 35px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 320px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+/* estilo extra aos botões */
+.popup-conteudo button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
+  background: #ff6b00;
+  color: #fff;
+}
+
+.popup-conteudo button:hover {
+  background: #ff8c42;
 }
